@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.filmpapa" name="FilmPapa HD" version="1.0.13" provider-name="vargalex">
+<addon id="plugin.video.filmpapa" name="FilmPapa HD" version="1.0.14" provider-name="vargalex">
 	<requires>
 		<import addon="script.module.resolveurl" version="5.1.00"/>
+		<import addon="script.module.inputstreamhelper" version="0.4.3"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="default.py">
 		<provides>video</provides>
@@ -11,7 +12,7 @@
 		<description lang="en">Nézd meg a filmeket, sorozatokat a https://plusz.club oldalról!</description>
 		<language>hu</language>
 		<platform>all</platform>
-		<news>- Megjelenés éve szerinti csoportosítás
+		<news>- Inputstream adaptive használata m3u8 linkek lejátszásakor
 		</news>
 		<assets>
 		  <icon>icon.png</icon>
