@@ -1,4 +1,6 @@
-﻿[B]1.0.13[/B]
+﻿[B]1.0.14[/B]
+- Inputstream adaptive használata m3u8 linkek lejátszásakor
+[B]1.0.13[/B]
 - Megjelenés éve szerinti csoportosítás
 [B]1.0.12[/B]
 - Film hossz rossz megadásának kezelése
